<resources>
    <string name="app_name">GajeApp</string>
    <string name="title_home">Home</string>

    <string name="title_notifications">Notif</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Profil</string>
    <string name="communities">Komunitas</string>
    <string name="email">Email</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="username">Username</string>
    <string name="pwd">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="login">LOGIN</string>
    <string name="tv_register">Belum Mempuunyai Akun ? Daftar Sekarang</string>
    <string name="reg_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="register">REGISTER</string>
    <string name="todo">TODO</string>
    <string name="registering">Registering User</string>
</resources>
