<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register"
    android:background="#5d1049"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/theroomwhite"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/regEmail"
            android:inputType="textEmailAddress"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/reg_email"
            android:textSize="17sp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="18dp"
            android:drawableLeft="@drawable/ic_face_black_24dp"
            android:padding="12dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_email_black_24dp"/>
        <EditText
            android:id="@+id/regUsername"
            android:inputType="textPersonName"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_username"
            android:textSize="17sp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="18dp"
            android:drawableLeft="@drawable/ic_face_black_24dp"
            android:padding="12dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_face_black_24dp" />
        <EditText
            android:id="@+id/regPassword"
            android:inputType="textPassword"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_password"
            android:textSize="17sp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="18dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="20dp"
            android:padding="12dp"
            android:drawableStart="@drawable/ic_lock_black_24dp" />
        <EditText
            android:id="@+id/regPassword2"
            android:inputType="textPassword"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/re_enter_password"
            android:textSize="17sp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="20dp"
            android:padding="12dp"
            android:drawableStart="@drawable/ic_lock_black_24dp" />
        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#720d5d"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/buttonbackground"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</LinearLayout>